--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "UNLICENSED",
   "author": "",
   "description": "",
-
+  "homepage": "https://themewagon.github.io/GlobalBank",
   "scripts": {
     "browsersync": "browser-sync start --directory --server ./public --files ./public/* --startPath index.html",
     "clean": "rimraf public/*",
@@ -17,7 +17,9 @@
     "build": "npm-run-all --sequential clean copy-* templates css",
     "watch": "npm-run-all build --parallel watch-templates watch-css browsersync",
     "watch-templates": "npm run templates -- --watch",
-    "watch-css": "tailwindcss build -i src/tailwind/tailwind.css -c src/tailwind/tailwind.config.js -o public/css/tailwind/tailwind.min.css --minify --watch"
+    "watch-css": "tailwindcss build -i src/tailwind/tailwind.css -c src/tailwind/tailwind.config.js -o public/css/tailwind/tailwind.min.css --minify --watch",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public"
   },
   "dependencies": {
     "tailwindcss": "^3.0.7"
@@ -26,6 +28,7 @@
     "autoprefixer": "^10.4.0",
     "browser-sync": "^2.27.7",
     "cpx": "^1.5.0",
+    "gh-pages": "^6.3.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "pug-cli": "^1.0.0-alpha6",
